# sensor-api-client

./: LICENSE  README.md
python/: README.md  pyproject.toml
python/src/: main.py
