[project]
name = "sensor-api-client"
version = "0.1.0"
description = "Python client for the sensor-api-server for AMG8833 IR sensor"
authors = [
    {name = "big-jr",email = "githubcomms@softwarepragmatism.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "scipy (>=1.15.2,<1.16.0)",
    "requests (>=2.32.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
