[project]
name = "sensor-api-client"
version = "0.1.2"
description = "Python client for the sensor-api-server for AMG8833 IR sensor"
authors = [
    {name = "big-jr",email = "githubcomms@softwarepragmatism.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.4.1,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "scipy (>=1.17.0,<1.18.0)",
    "requests (>=2.32.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
